Updates pre-commit-config to use terraform_docs instead of _replace

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,5 +7,4 @@ repos:
     hooks:
       - id: terraform_fmt
       - id: terraform_validate
-      - id: terraform_docs_replace
-        args: ["--with-aggregate-type-defaults", "--sort-inputs-by-required"]
+      - id: terraform_docs
